Home page now works. Better title

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
-  <h1>Countries</h1>
+  <h1>List of Countries</h1>
   <ul>
     <% @countries.each do |country| %>
       <li><a href="/countries/<%= country.code %>"><%= country.name %></a></li>
